test/invalid_confs/no_path.lua
-- ERROR: no Path defined in Host
Listen "8080" {
    Host "*h.exampl.com" {
    },
}
